--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
       <artifactId>checkstyle</artifactId>
       <version>10.3.1</version>
     </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
   </dependencies>
 
   <build>
